@@ -1,4 +1,9 @@
 2006-08-24 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* include/GParted_Core.h,
+	  src/GParted_Core.cc: improvements to probe and copy stuff.
+
+2006-08-24 Bart Hakvoort <hakvoort@cvs.gnome.org>
 	
 	* src/GParted_Core.cc: use Glib::timer instead of std::time stuff for
 	  the probing, this is more accurate since the resolution is much
